@@ -117,3 +117,4 @@ Revision	Log Message
 115		Use doParseFile()
 116		Advisors for ROTW (except the parser chokes on the history files)
 117		Updated parser files (and fixes to province mapping revealed by update)
+118		Turkish/Open Succession fixed
